Erstatter stønadskontotype enum med UttakPeriodeType som nå brukes på periodenivå på tvers av ytelsefordeling og fastsatt uttak