@@ -40,6 +40,7 @@ import no.nav.foreldrepenger.behandlingslager.behandling.repository.BehandlingL�
 import no.nav.foreldrepenger.behandlingslager.behandling.repository.BehandlingRepositoryProvider;
 import no.nav.foreldrepenger.behandlingslager.behandling.vedtak.VedtakResultatType;
 import no.nav.foreldrepenger.behandlingslager.behandling.verge.VergeRepository;
+import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.UttakPeriodeType;
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.årsak.OppholdÅrsak;
 import no.nav.foreldrepenger.behandlingslager.testutilities.behandling.ScenarioMorSøkerForeldrepenger;
 import no.nav.foreldrepenger.behandlingslager.uttak.PeriodeResultatType;
@@ -47,7 +48,6 @@ import no.nav.foreldrepenger.behandlingslager.uttak.Utbetalingsgrad;
 import no.nav.foreldrepenger.behandlingslager.uttak.UttakArbeidType;
 import no.nav.foreldrepenger.behandlingslager.uttak.fp.FpUttakRepository;
 import no.nav.foreldrepenger.behandlingslager.uttak.fp.PeriodeResultatÅrsak;
-import no.nav.foreldrepenger.behandlingslager.uttak.fp.StønadskontoType;
 import no.nav.foreldrepenger.behandlingslager.uttak.fp.Trekkdager;
 import no.nav.foreldrepenger.behandlingslager.uttak.fp.UttakAktivitetEntitet;
 import no.nav.foreldrepenger.behandlingslager.uttak.fp.UttakResultatEntitet;
@@ -76,8 +76,7 @@ class ErEndringIUttakTest {
 
     private BeregningsresultatRepository beregningsresultatRepository;
     private FpUttakRepository fpUttakRepository;
-    private final EndringsdatoRevurderingUtleder datoRevurderingUtlederImpl = mock(
-            EndringsdatoRevurderingUtleder.class);
+    private final EndringsdatoRevurderingUtleder datoRevurderingUtlederImpl = mock(EndringsdatoRevurderingUtleder.class);
     private BehandlingRepositoryProvider repositoryProvider;
     private BehandlingGrunnlagRepositoryProvider grunnlagRepositoryProvider;
     private BehandlingRevurderingTjeneste behandlingRevurderingTjeneste;
@@ -98,28 +97,23 @@ class ErEndringIUttakTest {
     }
 
     private Behandling opprettRevurdering(Behandling behandlingSomSkalRevurderes) {
-        var behandlingskontrollTjeneste = new BehandlingskontrollTjenesteImpl(
-                serviceProvider);
+        var behandlingskontrollTjeneste = new BehandlingskontrollTjenesteImpl(serviceProvider);
         var revurderingTjenesteFelles = new RevurderingTjenesteFelles(repositoryProvider, behandlingRevurderingTjeneste);
         RevurderingTjeneste revurderingTjeneste = new RevurderingTjenesteImpl(repositoryProvider, grunnlagRepositoryProvider,
-                behandlingskontrollTjeneste, iayTjeneste, revurderingEndring, revurderingTjenesteFelles, vergeRepository);
+            behandlingskontrollTjeneste, iayTjeneste, revurderingEndring, revurderingTjenesteFelles, vergeRepository);
         var dato = LocalDate.now().minusMonths(3);
         when(datoRevurderingUtlederImpl.utledEndringsdato(any())).thenReturn(dato);
-        return revurderingTjeneste.opprettAutomatiskRevurdering(behandlingSomSkalRevurderes.getFagsak(),
-                BehandlingÅrsakType.RE_HENDELSE_FØDSEL, new OrganisasjonsEnhet("1234", "Test"));
+        return revurderingTjeneste.opprettAutomatiskRevurdering(behandlingSomSkalRevurderes.getFagsak(), BehandlingÅrsakType.RE_HENDELSE_FØDSEL,
+            new OrganisasjonsEnhet("1234", "Test"));
     }
 
     private Behandling opprettFørstegangsbehandling() {
         var scenario = ScenarioMorSøkerForeldrepenger.forFødsel();
-        scenario.medBehandlingVedtak()
-                .medVedtakstidspunkt(LocalDateTime.now())
-                .medVedtakResultatType(VedtakResultatType.INNVILGET);
-        scenario.leggTilAksjonspunkt(AksjonspunktDefinisjon.AVKLAR_TERMINBEKREFTELSE,
-                BehandlingStegType.KONTROLLER_FAKTA);
+        scenario.medBehandlingVedtak().medVedtakstidspunkt(LocalDateTime.now()).medVedtakResultatType(VedtakResultatType.INNVILGET);
+        scenario.leggTilAksjonspunkt(AksjonspunktDefinisjon.AVKLAR_TERMINBEKREFTELSE, BehandlingStegType.KONTROLLER_FAKTA);
         var behandlingSomSkalRevurderes = scenario.lagre(repositoryProvider);
         repositoryProvider.getOpptjeningRepository()
-                .lagreOpptjeningsperiode(behandlingSomSkalRevurderes, LocalDate.now().minusYears(1), LocalDate.now(),
-                        false);
+            .lagreOpptjeningsperiode(behandlingSomSkalRevurderes, LocalDate.now().minusYears(1), LocalDate.now(), false);
         revurderingTestUtil.avsluttBehandling(behandlingSomSkalRevurderes);
         return behandlingSomSkalRevurderes;
     }
@@ -132,13 +126,12 @@ class ErEndringIUttakTest {
         var revurdering = opprettRevurdering(førstegangsbehandling);
         lagBeregningsresultatperiodeMedEndringstidspunkt(dato, førstegangsbehandling, revurdering);
 
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), StønadskontoType.FORELDREPENGER);
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            UttakPeriodeType.FORELDREPENGER);
 
         var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10)),
-                        new LocalDateInterval(dato.plusDays(11), dato.plusDays(20))),
-                StønadskontoType.FEDREKVOTE);
+            List.of(new LocalDateInterval(dato, dato.plusDays(10)), new LocalDateInterval(dato.plusDays(11), dato.plusDays(20))),
+            UttakPeriodeType.FEDREKVOTE);
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -157,16 +150,14 @@ class ErEndringIUttakTest {
         var revurdering = opprettRevurdering(førstegangsbehandling);
         lagBeregningsresultatperiodeMedEndringstidspunkt(dato, førstegangsbehandling, revurdering);
 
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FORELDREPENGER));
 
-        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true),
-                Collections.nCopies(2, 100), Collections.nCopies(2, 100), List.of(new Trekkdager(2), new Trekkdager(10)),
-                Collections.nCopies(2, StønadskontoType.FORELDREPENGER));
+        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true),
+            Collections.nCopies(2, 100), Collections.nCopies(2, 100), List.of(new Trekkdager(2), new Trekkdager(10)),
+            Collections.nCopies(2, UttakPeriodeType.FORELDREPENGER));
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -185,15 +176,13 @@ class ErEndringIUttakTest {
         var revurdering = opprettRevurdering(førstegangsbehandling);
         lagBeregningsresultatperiodeMedEndringstidspunkt(dato, førstegangsbehandling, revurdering);
 
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FORELDREPENGER));
 
-        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(10)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(10)), List.of(UttakPeriodeType.FORELDREPENGER));
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -212,15 +201,13 @@ class ErEndringIUttakTest {
         var revurdering = opprettRevurdering(førstegangsbehandling);
         lagBeregningsresultatperiodeMedEndringstidspunkt(dato, førstegangsbehandling, revurdering);
 
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(false), List.of(100),
-                List.of(100), List.of(Trekkdager.ZERO), List.of(StønadskontoType.UDEFINERT));
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(false),
+            List.of(100), List.of(100), List.of(Trekkdager.ZERO), List.of(UttakPeriodeType.UDEFINERT));
 
-        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(false), List.of(100),
-                List.of(100), List.of(Trekkdager.ZERO), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(false),
+            List.of(100), List.of(100), List.of(Trekkdager.ZERO), List.of(UttakPeriodeType.FORELDREPENGER));
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -246,35 +233,27 @@ class ErEndringIUttakTest {
         var revurdering = opprettRevurdering(førstegangsbehandling);
         lagBeregningsresultatperiodeMedEndringstidspunkt(dato, førstegangsbehandling, revurdering);
 
-        var uttakResultatPlanBuilderOrig = new UttakResultatEntitet.Builder(
-                førstegangsbehandling.getBehandlingsresultat());
+        var uttakResultatPlanBuilderOrig = new UttakResultatEntitet.Builder(førstegangsbehandling.getBehandlingsresultat());
         lagUttakResultatPlanForBehandlingLogging(List.of(orig1, orig2), List.of(false, false), List.of(false, false),
-                List.of(PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET),
-                List.of(PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT), List.of(false, false), List.of(100, 0),
-                List.of(0, 100), List.of(Trekkdager.ZERO, new Trekkdager(95)),
-                List.of(StønadskontoType.UDEFINERT, StønadskontoType.FEDREKVOTE),
-                List.of(OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT), false, uttakResultatPlanBuilderOrig);
+            List.of(PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT),
+            List.of(false, false), List.of(100, 0), List.of(0, 100), List.of(Trekkdager.ZERO, new Trekkdager(95)),
+            List.of(UttakPeriodeType.UDEFINERT, UttakPeriodeType.FEDREKVOTE), List.of(OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT), false,
+            uttakResultatPlanBuilderOrig);
         var uttakResultatOriginal = uttakResultatPlanBuilderOrig.build();
-        fpUttakRepository.lagreOpprinneligUttakResultatPerioder(førstegangsbehandling.getId(),
-                uttakResultatOriginal.getGjeldendePerioder());
+        fpUttakRepository.lagreOpprinneligUttakResultatPerioder(førstegangsbehandling.getId(), uttakResultatOriginal.getGjeldendePerioder());
 
-        var uttakResultatPlanBuilderRev = new UttakResultatEntitet.Builder(
-                revurdering.getBehandlingsresultat());
+        var uttakResultatPlanBuilderRev = new UttakResultatEntitet.Builder(revurdering.getBehandlingsresultat());
         lagUttakResultatPlanForBehandlingLogging(List.of(ny1a, ny1b, ny2a, ny2b), List.of(false, false, false, false),
-                List.of(false, false, false, false),
-                List.of(PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET,
-                        PeriodeResultatType.INNVILGET),
-                List.of(PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT,
-                        PeriodeResultatÅrsak.UKJENT),
-                List.of(false, false, false, false), List.of(100, 100, 0, 0),
-                List.of(0, 0, 100, 100), List.of(Trekkdager.ZERO, Trekkdager.ZERO, new Trekkdager(93), new Trekkdager(2)),
-                List.of(StønadskontoType.UDEFINERT, StønadskontoType.FEDREKVOTE, StønadskontoType.FEDREKVOTE,
-                        StønadskontoType.FEDREKVOTE),
-                List.of(OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT),
-                false, uttakResultatPlanBuilderRev);
+            List.of(false, false, false, false),
+            List.of(PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET),
+            List.of(PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT),
+            List.of(false, false, false, false), List.of(100, 100, 0, 0), List.of(0, 0, 100, 100),
+            List.of(Trekkdager.ZERO, Trekkdager.ZERO, new Trekkdager(93), new Trekkdager(2)),
+            List.of(UttakPeriodeType.UDEFINERT, UttakPeriodeType.FEDREKVOTE, UttakPeriodeType.FEDREKVOTE, UttakPeriodeType.FEDREKVOTE),
+            List.of(OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT), false,
+            uttakResultatPlanBuilderRev);
         var uttakResultatRevurdering = uttakResultatPlanBuilderRev.build();
-        fpUttakRepository.lagreOpprinneligUttakResultatPerioder(revurdering.getId(),
-                uttakResultatRevurdering.getGjeldendePerioder());
+        fpUttakRepository.lagreOpprinneligUttakResultatPerioder(revurdering.getId(), uttakResultatRevurdering.getGjeldendePerioder());
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -302,53 +281,40 @@ class ErEndringIUttakTest {
         var revurdering = opprettRevurdering(førstegangsbehandling);
         lagBeregningsresultatperiodeMedEndringstidspunkt(dato, førstegangsbehandling, revurdering);
 
-        var uttakResultatPlanBuilderOrig = new UttakResultatEntitet.Builder(
-                førstegangsbehandling.getBehandlingsresultat());
-        lagUttakResultatPlanForBehandlingLogging(List.of(orig1, orig2, orig3), List.of(false, false, false),
-                List.of(false, false, false),
-                List.of(PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET),
-                List.of(PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT),
-                List.of(false, false, false), List.of(0, 0, 0), List.of(0, 0), List.of(Trekkdager.ZERO, Trekkdager.ZERO),
-                List.of(StønadskontoType.UDEFINERT, StønadskontoType.UDEFINERT),
-                List.of(OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT, OppholdÅrsak.FEDREKVOTE_ANNEN_FORELDER), false,
-                uttakResultatPlanBuilderOrig);
+        var uttakResultatPlanBuilderOrig = new UttakResultatEntitet.Builder(førstegangsbehandling.getBehandlingsresultat());
+        lagUttakResultatPlanForBehandlingLogging(List.of(orig1, orig2, orig3), List.of(false, false, false), List.of(false, false, false),
+            List.of(PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET),
+            List.of(PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT), List.of(false, false, false),
+            List.of(0, 0, 0), List.of(0, 0), List.of(Trekkdager.ZERO, Trekkdager.ZERO),
+            List.of(UttakPeriodeType.UDEFINERT, UttakPeriodeType.UDEFINERT),
+            List.of(OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT, OppholdÅrsak.FEDREKVOTE_ANNEN_FORELDER), false, uttakResultatPlanBuilderOrig);
         var uttakResultatOriginal = uttakResultatPlanBuilderOrig.build();
-        fpUttakRepository.lagreOpprinneligUttakResultatPerioder(førstegangsbehandling.getId(),
-                uttakResultatOriginal.getGjeldendePerioder());
+        fpUttakRepository.lagreOpprinneligUttakResultatPerioder(førstegangsbehandling.getId(), uttakResultatOriginal.getGjeldendePerioder());
 
-        var uttakResultatPlanBuilderRev = new UttakResultatEntitet.Builder(
-                revurdering.getBehandlingsresultat());
-        lagUttakResultatPlanForBehandlingLogging(List.of(ny1, ny2, ny3, ny4, ny5),
-                List.of(false, false, false, false, false), List.of(false, false, false, false, false),
-                List.of(PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET,
-                        PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET),
-                List.of(PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT,
-                        PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT),
-                List.of(false, false, false, false, false),
-                List.of(0, 0, 0), List.of(0, 0, 0), List.of(Trekkdager.ZERO, Trekkdager.ZERO, Trekkdager.ZERO),
-                List.of(StønadskontoType.FELLESPERIODE, StønadskontoType.FELLESPERIODE, StønadskontoType.FELLESPERIODE),
-                List.of(OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT,
-                        OppholdÅrsak.FEDREKVOTE_ANNEN_FORELDER, OppholdÅrsak.FEDREKVOTE_ANNEN_FORELDER),
-                false,
-                uttakResultatPlanBuilderRev);
-        lagUttakResultatPlanForBehandlingLogging(List.of(ny1, ny2, ny3, ny4, ny5),
-                List.of(false, false, false, false, false), List.of(false, false, false, false, false),
-                List.of(PeriodeResultatType.INNVILGET, PeriodeResultatType.AVSLÅTT, PeriodeResultatType.AVSLÅTT,
-                        PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET),
-                List.of(PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT,
-                        PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT),
-                List.of(false, false, false, false, false),
-                List.of(0, 0, 0), List.of(0, 0, 0), List.of(Trekkdager.ZERO, Trekkdager.ZERO, Trekkdager.ZERO),
-                List.of(StønadskontoType.FELLESPERIODE, StønadskontoType.FELLESPERIODE, StønadskontoType.FELLESPERIODE),
-                List.of(OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT,
-                        OppholdÅrsak.FEDREKVOTE_ANNEN_FORELDER, OppholdÅrsak.FEDREKVOTE_ANNEN_FORELDER),
-                true,
-                uttakResultatPlanBuilderRev);
+        var uttakResultatPlanBuilderRev = new UttakResultatEntitet.Builder(revurdering.getBehandlingsresultat());
+        lagUttakResultatPlanForBehandlingLogging(List.of(ny1, ny2, ny3, ny4, ny5), List.of(false, false, false, false, false),
+            List.of(false, false, false, false, false),
+            List.of(PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET, PeriodeResultatType.INNVILGET,
+                PeriodeResultatType.INNVILGET),
+            List.of(PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT,
+                PeriodeResultatÅrsak.UKJENT), List.of(false, false, false, false, false), List.of(0, 0, 0), List.of(0, 0, 0),
+            List.of(Trekkdager.ZERO, Trekkdager.ZERO, Trekkdager.ZERO),
+            List.of(UttakPeriodeType.FELLESPERIODE, UttakPeriodeType.FELLESPERIODE, UttakPeriodeType.FELLESPERIODE),
+            List.of(OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT, OppholdÅrsak.FEDREKVOTE_ANNEN_FORELDER,
+                OppholdÅrsak.FEDREKVOTE_ANNEN_FORELDER), false, uttakResultatPlanBuilderRev);
+        lagUttakResultatPlanForBehandlingLogging(List.of(ny1, ny2, ny3, ny4, ny5), List.of(false, false, false, false, false),
+            List.of(false, false, false, false, false),
+            List.of(PeriodeResultatType.INNVILGET, PeriodeResultatType.AVSLÅTT, PeriodeResultatType.AVSLÅTT, PeriodeResultatType.INNVILGET,
+                PeriodeResultatType.INNVILGET),
+            List.of(PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT, PeriodeResultatÅrsak.UKJENT,
+                PeriodeResultatÅrsak.UKJENT), List.of(false, false, false, false, false), List.of(0, 0, 0), List.of(0, 0, 0),
+            List.of(Trekkdager.ZERO, Trekkdager.ZERO, Trekkdager.ZERO),
+            List.of(UttakPeriodeType.FELLESPERIODE, UttakPeriodeType.FELLESPERIODE, UttakPeriodeType.FELLESPERIODE),
+            List.of(OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT, OppholdÅrsak.UDEFINERT, OppholdÅrsak.FEDREKVOTE_ANNEN_FORELDER,
+                OppholdÅrsak.FEDREKVOTE_ANNEN_FORELDER), true, uttakResultatPlanBuilderRev);
         var uttakResultatRevurdering = uttakResultatPlanBuilderRev.build();
-        fpUttakRepository.lagreOpprinneligUttakResultatPerioder(revurdering.getId(),
-                uttakResultatRevurdering.getOpprinneligPerioder());
-        fpUttakRepository.lagreOverstyrtUttakResultatPerioder(revurdering.getId(),
-                uttakResultatRevurdering.getOverstyrtPerioder());
+        fpUttakRepository.lagreOpprinneligUttakResultatPerioder(revurdering.getId(), uttakResultatRevurdering.getOpprinneligPerioder());
+        fpUttakRepository.lagreOverstyrtUttakResultatPerioder(revurdering.getId(), uttakResultatRevurdering.getOverstyrtPerioder());
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -367,15 +333,13 @@ class ErEndringIUttakTest {
         var revurdering = opprettRevurdering(førstegangsbehandling);
         lagBeregningsresultatperiodeMedEndringstidspunkt(dato, førstegangsbehandling, revurdering);
 
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FORELDREPENGER));
 
-        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(50),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(50),
+            List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FORELDREPENGER));
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -394,15 +358,13 @@ class ErEndringIUttakTest {
         var revurdering = opprettRevurdering(førstegangsbehandling);
         lagBeregningsresultatperiodeMedEndringstidspunkt(dato, førstegangsbehandling, revurdering);
 
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FORELDREPENGER));
 
-        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(50), List.of(new Trekkdager(12)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(50), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FORELDREPENGER));
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -421,11 +383,11 @@ class ErEndringIUttakTest {
         var revurdering = opprettRevurdering(førstegangsbehandling);
         lagBeregningsresultatperiodeMedEndringstidspunkt(dato, førstegangsbehandling, revurdering);
 
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), StønadskontoType.FORELDREPENGER);
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            UttakPeriodeType.FORELDREPENGER);
 
-        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), StønadskontoType.FEDREKVOTE);
+        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            UttakPeriodeType.FEDREKVOTE);
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -444,11 +406,11 @@ class ErEndringIUttakTest {
         var revurdering = opprettRevurdering(førstegangsbehandling);
         lagBeregningsresultatperiodeMedEndringstidspunkt(dato, førstegangsbehandling, revurdering);
 
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(PeriodeResultatType.AVSLÅTT));
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(PeriodeResultatType.AVSLÅTT));
 
-        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(PeriodeResultatType.INNVILGET));
+        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(PeriodeResultatType.INNVILGET));
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -467,11 +429,11 @@ class ErEndringIUttakTest {
         var revurdering = opprettRevurdering(førstegangsbehandling);
         lagBeregningsresultatperiodeMedEndringstidspunkt(dato, førstegangsbehandling, revurdering);
 
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), StønadskontoType.FORELDREPENGER);
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), UttakPeriodeType.FORELDREPENGER);
 
-        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(true), StønadskontoType.FORELDREPENGER);
+        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(true), UttakPeriodeType.FORELDREPENGER);
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -490,15 +452,13 @@ class ErEndringIUttakTest {
         var revurdering = opprettRevurdering(førstegangsbehandling);
         lagBeregningsresultatperiodeMedEndringstidspunkt(dato, førstegangsbehandling, revurdering);
 
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FORELDREPENGER));
 
-        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(false), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(false),
+            List.of(100), List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FORELDREPENGER));
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -512,8 +472,7 @@ class ErEndringIUttakTest {
     @Test
     void skal_gi_ingen_endring_dersom_begge_uttak_mangler() {
         // Act
-        var endringIUttak = new UttakResultatHolderFP(Optional.empty(), null).harUlikUttaksplan(
-                new UttakResultatHolderFP(Optional.empty(), null));
+        var endringIUttak = new UttakResultatHolderFP(Optional.empty(), null).harUlikUttaksplan(new UttakResultatHolderFP(Optional.empty(), null));
 
         // Assert
         assertThat(endringIUttak).isFalse();
@@ -525,17 +484,15 @@ class ErEndringIUttakTest {
         var dato = LocalDate.now();
 
         var førstegangsbehandling = opprettFørstegangsbehandling();
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), Collections.emptyList());
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(12)), Collections.emptyList());
 
         var revurdering = opprettRevurdering(førstegangsbehandling);
-        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true),
-                Collections.nCopies(2, 100), Collections.nCopies(2, 100), List.of(new Trekkdager(2), new Trekkdager(10)),
-                Collections.nCopies(2, StønadskontoType.FORELDREPENGER));
+        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true),
+            Collections.nCopies(2, 100), Collections.nCopies(2, 100), List.of(new Trekkdager(2), new Trekkdager(10)),
+            Collections.nCopies(2, UttakPeriodeType.FORELDREPENGER));
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -552,16 +509,14 @@ class ErEndringIUttakTest {
         var dato = LocalDate.now();
 
         var førstegangsbehandling = opprettFørstegangsbehandling();
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FORELDREPENGER));
 
         var revurdering = opprettRevurdering(førstegangsbehandling);
-        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FELLESPERIODE));
+        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FELLESPERIODE));
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
         var originalBehandlingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatOriginal)), null);
@@ -577,16 +532,15 @@ class ErEndringIUttakTest {
         var dato = LocalDate.now();
 
         var førstegangsbehandling = opprettFørstegangsbehandling();
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FELLESPERIODE));
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FELLESPERIODE));
 
         var revurdering = opprettRevurdering(førstegangsbehandling);
         var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato.plusDays(1), dato.plusDays(11))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FELLESPERIODE));
+            List.of(new LocalDateInterval(dato.plusDays(1), dato.plusDays(11))), List.of(false), List.of(false),
+            List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100), List.of(100),
+            List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FELLESPERIODE));
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
         var originalBehandlingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatOriginal)), null);
@@ -602,16 +556,14 @@ class ErEndringIUttakTest {
         var dato = LocalDate.now();
 
         var førstegangsbehandling = opprettFørstegangsbehandling();
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(true),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(true), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FORELDREPENGER));
 
         var revurdering = opprettRevurdering(førstegangsbehandling);
-        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FORELDREPENGER));
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
         var originalBehandlingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatOriginal)), null);
@@ -629,15 +581,13 @@ class ErEndringIUttakTest {
         var revurdering = opprettRevurdering(førstegangsbehandling);
         lagBeregningsresultatperiodeMedEndringstidspunkt(dato, førstegangsbehandling, revurdering);
 
-        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatOriginal = lagUttakResultatPlanForBehandling(førstegangsbehandling, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FORELDREPENGER));
 
-        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering,
-                List.of(new LocalDateInterval(dato, dato.plusDays(10))), List.of(false), List.of(false),
-                List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
-                List.of(100), List.of(new Trekkdager(12)), List.of(StønadskontoType.FORELDREPENGER));
+        var uttakResultatRevurdering = lagUttakResultatPlanForBehandling(revurdering, List.of(new LocalDateInterval(dato, dato.plusDays(10))),
+            List.of(false), List.of(false), List.of(PeriodeResultatType.INNVILGET), List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(new Trekkdager(12)), List.of(UttakPeriodeType.FORELDREPENGER));
 
         // Act
         var revurderingHolder = new UttakResultatHolderFP(Optional.of(map(uttakResultatRevurdering)), null);
@@ -649,107 +599,99 @@ class ErEndringIUttakTest {
     }
 
     private void lagUttakPeriodeMedPeriodeAktivitet(UttakResultatPerioderEntitet uttakResultatPerioder,
-            LocalDateInterval periode,
-            boolean samtidigUttak,
-            PeriodeResultatType periodeResultatType,
-            PeriodeResultatÅrsak periodeResultatÅrsak,
-            boolean graderingInnvilget,
-            boolean erFlerbarnsdager,
-            List<Integer> andelIArbeid,
-            List<Integer> utbetalingsgrad,
-            List<Trekkdager> trekkdager,
-            List<StønadskontoType> stønadskontoTyper) {
-        var uttakResultatPeriode = byggPeriode(periode.getFomDato(), periode.getTomDato(),
-                samtidigUttak, periodeResultatType, periodeResultatÅrsak, graderingInnvilget, erFlerbarnsdager);
+                                                    LocalDateInterval periode,
+                                                    boolean samtidigUttak,
+                                                    PeriodeResultatType periodeResultatType,
+                                                    PeriodeResultatÅrsak periodeResultatÅrsak,
+                                                    boolean graderingInnvilget,
+                                                    boolean erFlerbarnsdager,
+                                                    List<Integer> andelIArbeid,
+                                                    List<Integer> utbetalingsgrad,
+                                                    List<Trekkdager> trekkdager,
+                                                    List<UttakPeriodeType> stønadskontoTyper) {
+        var uttakResultatPeriode = byggPeriode(periode.getFomDato(), periode.getTomDato(), samtidigUttak, periodeResultatType, periodeResultatÅrsak,
+            graderingInnvilget, erFlerbarnsdager);
 
         var antallAktiviteter = stønadskontoTyper.size();
         for (var i = 0; i < antallAktiviteter; i++) {
-            var periodeAktivitet = lagPeriodeAktivitet(stønadskontoTyper.get(i),
-                    uttakResultatPeriode, trekkdager.get(i), andelIArbeid.get(i), utbetalingsgrad.get(i));
+            var periodeAktivitet = lagPeriodeAktivitet(stønadskontoTyper.get(i), uttakResultatPeriode, trekkdager.get(i), andelIArbeid.get(i),
+                utbetalingsgrad.get(i));
             uttakResultatPeriode.leggTilAktivitet(periodeAktivitet);
         }
         uttakResultatPerioder.leggTilPeriode(uttakResultatPeriode);
     }
 
     private void lagUttakPeriodeUtenPeriodeAktivitet(UttakResultatPerioderEntitet uttakResultatPerioder,
-            LocalDateInterval periode,
-            boolean samtidigUttak,
-            PeriodeResultatType periodeResultatType,
-            PeriodeResultatÅrsak periodeResultatÅrsak,
-            boolean graderingInnvilget,
-            boolean erFlerbarnsdager,
-            OppholdÅrsak oppholdÅrsak) {
-        var uttakResultatPeriode = new UttakResultatPeriodeEntitet.Builder(periode.getFomDato(),
-                periode.getTomDato()).medSamtidigUttak(samtidigUttak)
-                        .medResultatType(periodeResultatType, periodeResultatÅrsak)
-                        .medGraderingInnvilget(graderingInnvilget)
-                        .medFlerbarnsdager(erFlerbarnsdager)
-                        .medOppholdÅrsak(oppholdÅrsak)
-                        .build();
+                                                     LocalDateInterval periode,
+                                                     boolean samtidigUttak,
+                                                     PeriodeResultatType periodeResultatType,
+                                                     PeriodeResultatÅrsak periodeResultatÅrsak,
+                                                     boolean graderingInnvilget,
+                                                     boolean erFlerbarnsdager,
+                                                     OppholdÅrsak oppholdÅrsak) {
+        var uttakResultatPeriode = new UttakResultatPeriodeEntitet.Builder(periode.getFomDato(), periode.getTomDato()).medSamtidigUttak(samtidigUttak)
+            .medResultatType(periodeResultatType, periodeResultatÅrsak)
+            .medGraderingInnvilget(graderingInnvilget)
+            .medFlerbarnsdager(erFlerbarnsdager)
+            .medOppholdÅrsak(oppholdÅrsak)
+            .build();
         uttakResultatPerioder.leggTilPeriode(uttakResultatPeriode);
     }
 
-    private UttakResultatPeriodeAktivitetEntitet lagPeriodeAktivitet(StønadskontoType stønadskontoType,
-            UttakResultatPeriodeEntitet uttakResultatPeriode,
-            Trekkdager trekkdager,
-            int andelIArbeid,
-            int utbetalingsgrad) {
-        var uttakAktivitet = new UttakAktivitetEntitet.Builder().medArbeidsforhold(
-                Arbeidsgiver.virksomhet(ORGNR), ARBEIDSFORHOLD_ID)
-                .medUttakArbeidType(UttakArbeidType.ORDINÆRT_ARBEID)
-                .build();
+    private UttakResultatPeriodeAktivitetEntitet lagPeriodeAktivitet(UttakPeriodeType stønadskontoType,
+                                                                     UttakResultatPeriodeEntitet uttakResultatPeriode,
+                                                                     Trekkdager trekkdager,
+                                                                     int andelIArbeid,
+                                                                     int utbetalingsgrad) {
+        var uttakAktivitet = new UttakAktivitetEntitet.Builder().medArbeidsforhold(Arbeidsgiver.virksomhet(ORGNR), ARBEIDSFORHOLD_ID)
+            .medUttakArbeidType(UttakArbeidType.ORDINÆRT_ARBEID)
+            .build();
         return UttakResultatPeriodeAktivitetEntitet.builder(uttakResultatPeriode, uttakAktivitet)
-                .medTrekkonto(stønadskontoType)
-                .medTrekkdager(trekkdager)
-                .medArbeidsprosent(BigDecimal.valueOf(andelIArbeid))
-                .medUtbetalingsgrad(new Utbetalingsgrad(utbetalingsgrad))
-                .build();
+            .medTrekkonto(stønadskontoType)
+            .medTrekkdager(trekkdager)
+            .medArbeidsprosent(BigDecimal.valueOf(andelIArbeid))
+            .medUtbetalingsgrad(new Utbetalingsgrad(utbetalingsgrad))
+            .build();
     }
 
     private UttakResultatEntitet lagUttakResultatPlanForBehandling(Behandling behandling,
-            List<LocalDateInterval> perioder,
-            List<PeriodeResultatType> periodeResultatTyper) {
+                                                                   List<LocalDateInterval> perioder,
+                                                                   List<PeriodeResultatType> periodeResultatTyper) {
         return lagUttakResultatPlanForBehandling(behandling, perioder, Collections.nCopies(perioder.size(), false),
-                Collections.nCopies(perioder.size(), false), periodeResultatTyper, List.of(PeriodeResultatÅrsak.UKJENT),
-                List.of(true), List.of(100), List.of(100), List.of(Trekkdager.ZERO),
-                List.of(StønadskontoType.FORELDREPENGER));
+            Collections.nCopies(perioder.size(), false), periodeResultatTyper, List.of(PeriodeResultatÅrsak.UKJENT), List.of(true), List.of(100),
+            List.of(100), List.of(Trekkdager.ZERO), List.of(UttakPeriodeType.FORELDREPENGER));
     }
 
     private UttakResultatEntitet lagUttakResultatPlanForBehandling(Behandling behandling,
-            List<LocalDateInterval> perioder,
-            StønadskontoType stønadskontoType) {
+                                                                   List<LocalDateInterval> perioder,
+                                                                   UttakPeriodeType stønadskontoType) {
         return lagUttakResultatPlanForBehandling(behandling, perioder, Collections.nCopies(perioder.size(), false),
-                Collections.nCopies(perioder.size(), false),
-                Collections.nCopies(perioder.size(), PeriodeResultatType.INNVILGET),
-                Collections.nCopies(perioder.size(), PeriodeResultatÅrsak.UKJENT),
-                Collections.nCopies(perioder.size(), true), List.of(100), List.of(100), List.of(new Trekkdager(1)),
-                List.of(stønadskontoType));
+            Collections.nCopies(perioder.size(), false), Collections.nCopies(perioder.size(), PeriodeResultatType.INNVILGET),
+            Collections.nCopies(perioder.size(), PeriodeResultatÅrsak.UKJENT), Collections.nCopies(perioder.size(), true), List.of(100), List.of(100),
+            List.of(new Trekkdager(1)), List.of(stønadskontoType));
     }
 
     private UttakResultatEntitet lagUttakResultatPlanForBehandling(Behandling behandling,
-            List<LocalDateInterval> perioder,
-            List<Boolean> samtidigUttak,
-            StønadskontoType stønadskontoType) {
-        return lagUttakResultatPlanForBehandling(behandling, perioder, samtidigUttak,
-                Collections.nCopies(perioder.size(), false),
-                Collections.nCopies(perioder.size(), PeriodeResultatType.INNVILGET),
-                Collections.nCopies(perioder.size(), PeriodeResultatÅrsak.UKJENT), samtidigUttak, List.of(100),
-                List.of(100), List.of(Trekkdager.ZERO), List.of(stønadskontoType));
+                                                                   List<LocalDateInterval> perioder,
+                                                                   List<Boolean> samtidigUttak,
+                                                                   UttakPeriodeType stønadskontoType) {
+        return lagUttakResultatPlanForBehandling(behandling, perioder, samtidigUttak, Collections.nCopies(perioder.size(), false),
+            Collections.nCopies(perioder.size(), PeriodeResultatType.INNVILGET), Collections.nCopies(perioder.size(), PeriodeResultatÅrsak.UKJENT),
+            samtidigUttak, List.of(100), List.of(100), List.of(Trekkdager.ZERO), List.of(stønadskontoType));
     }
 
     private UttakResultatEntitet lagUttakResultatPlanForBehandling(Behandling behandling,
-            List<LocalDateInterval> perioder,
-            List<Boolean> samtidigUttak,
-            List<Boolean> erFlerbarnsdager,
-            List<PeriodeResultatType> periodeResultatTyper,
-            List<PeriodeResultatÅrsak> periodeResultatÅrsak,
-            List<Boolean> graderingInnvilget,
-            List<Integer> andelIArbeid,
-            List<Integer> utbetalingsgrad,
-            List<Trekkdager> trekkdager,
-            List<StønadskontoType> stønadskontoTyper) {
-        var uttakResultatPlanBuilder = new UttakResultatEntitet.Builder(
-                behandling.getBehandlingsresultat());
+                                                                   List<LocalDateInterval> perioder,
+                                                                   List<Boolean> samtidigUttak,
+                                                                   List<Boolean> erFlerbarnsdager,
+                                                                   List<PeriodeResultatType> periodeResultatTyper,
+                                                                   List<PeriodeResultatÅrsak> periodeResultatÅrsak,
+                                                                   List<Boolean> graderingInnvilget,
+                                                                   List<Integer> andelIArbeid,
+                                                                   List<Integer> utbetalingsgrad,
+                                                                   List<Trekkdager> trekkdager,
+                                                                   List<UttakPeriodeType> stønadskontoTyper) {
+        var uttakResultatPlanBuilder = new UttakResultatEntitet.Builder(behandling.getBehandlingsresultat());
         var uttakResultatPerioder = new UttakResultatPerioderEntitet();
         assertThat(perioder).hasSize(samtidigUttak.size());
         assertThat(perioder).hasSize(periodeResultatTyper.size());
@@ -757,31 +699,29 @@ class ErEndringIUttakTest {
         assertThat(perioder).hasSize(graderingInnvilget.size());
         var antallPerioder = perioder.size();
         for (var i = 0; i < antallPerioder; i++) {
-            lagUttakPeriodeMedPeriodeAktivitet(uttakResultatPerioder, perioder.get(i), samtidigUttak.get(i),
-                    periodeResultatTyper.get(i), periodeResultatÅrsak.get(i), graderingInnvilget.get(i),
-                    erFlerbarnsdager.get(i), andelIArbeid, utbetalingsgrad, trekkdager, stønadskontoTyper);
+            lagUttakPeriodeMedPeriodeAktivitet(uttakResultatPerioder, perioder.get(i), samtidigUttak.get(i), periodeResultatTyper.get(i),
+                periodeResultatÅrsak.get(i), graderingInnvilget.get(i), erFlerbarnsdager.get(i), andelIArbeid, utbetalingsgrad, trekkdager,
+                stønadskontoTyper);
         }
-        var uttakResultat = uttakResultatPlanBuilder.medOpprinneligPerioder(uttakResultatPerioder)
-                .build();
-        fpUttakRepository.lagreOpprinneligUttakResultatPerioder(behandling.getId(),
-                uttakResultat.getGjeldendePerioder());
+        var uttakResultat = uttakResultatPlanBuilder.medOpprinneligPerioder(uttakResultatPerioder).build();
+        fpUttakRepository.lagreOpprinneligUttakResultatPerioder(behandling.getId(), uttakResultat.getGjeldendePerioder());
         return uttakResultat;
 
     }
 
     private void lagUttakResultatPlanForBehandlingLogging(List<LocalDateInterval> perioder,
-            List<Boolean> samtidigUttak,
-            List<Boolean> erFlerbarnsdager,
-            List<PeriodeResultatType> periodeResultatTyper,
-            List<PeriodeResultatÅrsak> periodeResultatÅrsak,
-            List<Boolean> graderingInnvilget,
-            List<Integer> andelIArbeid,
-            List<Integer> utbetalingsgrad,
-            List<Trekkdager> trekkdager,
-            List<StønadskontoType> stønadskontoTyper,
-            List<OppholdÅrsak> oppholdÅrsaker,
-            boolean overstyrt,
-            UttakResultatEntitet.Builder uttakResultatPlanBuilder) {
+                                                          List<Boolean> samtidigUttak,
+                                                          List<Boolean> erFlerbarnsdager,
+                                                          List<PeriodeResultatType> periodeResultatTyper,
+                                                          List<PeriodeResultatÅrsak> periodeResultatÅrsak,
+                                                          List<Boolean> graderingInnvilget,
+                                                          List<Integer> andelIArbeid,
+                                                          List<Integer> utbetalingsgrad,
+                                                          List<Trekkdager> trekkdager,
+                                                          List<UttakPeriodeType> stønadskontoTyper,
+                                                          List<OppholdÅrsak> oppholdÅrsaker,
+                                                          boolean overstyrt,
+                                                          UttakResultatEntitet.Builder uttakResultatPlanBuilder) {
         var uttakResultatPerioder = new UttakResultatPerioderEntitet();
         assertThat(perioder).hasSize(samtidigUttak.size());
         assertThat(perioder).hasSize(periodeResultatTyper.size());
@@ -790,14 +730,12 @@ class ErEndringIUttakTest {
         var antallPerioder = perioder.size();
         for (var i = 0; i < antallPerioder; i++) {
             if (oppholdÅrsaker.get(i) != OppholdÅrsak.UDEFINERT) {
-                lagUttakPeriodeUtenPeriodeAktivitet(uttakResultatPerioder, perioder.get(i), samtidigUttak.get(i),
-                        periodeResultatTyper.get(i), periodeResultatÅrsak.get(i), graderingInnvilget.get(i),
-                        erFlerbarnsdager.get(i), oppholdÅrsaker.get(i));
+                lagUttakPeriodeUtenPeriodeAktivitet(uttakResultatPerioder, perioder.get(i), samtidigUttak.get(i), periodeResultatTyper.get(i),
+                    periodeResultatÅrsak.get(i), graderingInnvilget.get(i), erFlerbarnsdager.get(i), oppholdÅrsaker.get(i));
             } else {
-                lagUttakPeriodeMedPeriodeAktivitet(uttakResultatPerioder, perioder.get(i), samtidigUttak.get(i),
-                        periodeResultatTyper.get(i), periodeResultatÅrsak.get(i), graderingInnvilget.get(i),
-                        erFlerbarnsdager.get(i), List.of(andelIArbeid.get(i)), List.of(utbetalingsgrad.get(i)),
-                        List.of(trekkdager.get(i)), List.of(stønadskontoTyper.get(i)));
+                lagUttakPeriodeMedPeriodeAktivitet(uttakResultatPerioder, perioder.get(i), samtidigUttak.get(i), periodeResultatTyper.get(i),
+                    periodeResultatÅrsak.get(i), graderingInnvilget.get(i), erFlerbarnsdager.get(i), List.of(andelIArbeid.get(i)),
+                    List.of(utbetalingsgrad.get(i)), List.of(trekkdager.get(i)), List.of(stønadskontoTyper.get(i)));
             }
         }
         if (!overstyrt) {
@@ -808,26 +746,22 @@ class ErEndringIUttakTest {
     }
 
     private UttakResultatPeriodeEntitet byggPeriode(LocalDate fom,
-            LocalDate tom,
-            boolean samtidigUttak,
-            PeriodeResultatType periodeResultatType,
-            PeriodeResultatÅrsak periodeResultatÅrsak,
-            boolean graderingInnvilget,
-            boolean erFlerbarnsdager) {
+                                                    LocalDate tom,
+                                                    boolean samtidigUttak,
+                                                    PeriodeResultatType periodeResultatType,
+                                                    PeriodeResultatÅrsak periodeResultatÅrsak,
+                                                    boolean graderingInnvilget,
+                                                    boolean erFlerbarnsdager) {
         return new UttakResultatPeriodeEntitet.Builder(fom, tom).medSamtidigUttak(samtidigUttak)
-                .medResultatType(periodeResultatType, periodeResultatÅrsak)
-                .medGraderingInnvilget(graderingInnvilget)
-                .medFlerbarnsdager(erFlerbarnsdager)
-                .build();
+            .medResultatType(periodeResultatType, periodeResultatÅrsak)
+            .medGraderingInnvilget(graderingInnvilget)
+            .medFlerbarnsdager(erFlerbarnsdager)
+            .build();
     }
 
-    private void lagBeregningsresultatperiodeMedEndringstidspunkt(LocalDate dato,
-            Behandling førstegangsbehandling,
-            Behandling revurdering) {
-        var originaltresultat = LagBeregningsresultatTjeneste.lagBeregningsresultatperiodeMedEndringstidspunkt(
-                dato, true, ORGNR);
-        var revurderingsresultat = LagBeregningsresultatTjeneste.lagBeregningsresultatperiodeMedEndringstidspunkt(
-                dato, false, ORGNR);
+    private void lagBeregningsresultatperiodeMedEndringstidspunkt(LocalDate dato, Behandling førstegangsbehandling, Behandling revurdering) {
+        var originaltresultat = LagBeregningsresultatTjeneste.lagBeregningsresultatperiodeMedEndringstidspunkt(dato, true, ORGNR);
+        var revurderingsresultat = LagBeregningsresultatTjeneste.lagBeregningsresultatperiodeMedEndringstidspunkt(dato, false, ORGNR);
         beregningsresultatRepository.lagre(revurdering, revurderingsresultat);
         beregningsresultatRepository.lagre(førstegangsbehandling, originaltresultat);
     }
